:bug: fix: fix header z-index and search border-color

--- a/resources/views/sections/header/styles.scss
+++ b/resources/views/sections/header/styles.scss
@@ -1,1 +1,9 @@
-// WIP
+
+header {
+  z-index: 30;
+}
+
+#main-navbar [type="search"]:focus {
+  border-color: $text-secondary;
+  box-shadow: inset 0 0 0 1px $text-primary-light;
+}
